(feat) add main page layout

--- a/www/view/main.html
+++ b/www/view/main.html
@@ -1,8 +1,11 @@
 <ion-view>
-  <ion-header-bar class="bar-stable">
-    <h1 class="title">Ionic Blank Starter</h1>
-  </ion-header-bar>
   <ion-content>
-    <div>Hi</div>
+    <div class="main-container">
+      <div class="logo-container">Logo Container</div>
+      <button class="main-button button-font">I'm hungry</button>
+      <button class="main-button button-font">I'm serving</button>
+      <a><span class="link-font">Sign Up</span></a>
+      <div class="footer white-font">Provider to you by HR Bewildered-Cantaloupe</div>
+    </div>
   </ion-content>
 </ion-view>
